--- a/Home.html
+++ b/Home.html
@@ -4,7 +4,7 @@
         <title>Learning
         </title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+        <link rel="stylesheet" href="style.css"> 
     </head>
     <body>
         <div class="row">
@@ -26,7 +26,7 @@
                                 I have to finish my app before this summer. Earn some money. Learn React, React Native and Node js and python.
                             </p>
                         </div>
-                        <div class="col-lg-3 col-sm-6">
+                    <div class="col-lg-3 col-sm-6">
                                 <h1>
                                     Hello world
                                 </h1>
@@ -35,7 +35,7 @@
                                     I have to finish my app before this summer. Earn some money. Learn React, React Native and Node js and python.
                                 </p>
                             </div>
-                            <div class="col-lg-3 col-sm-6">
+                    <div class="col-lg-3 col-sm-6">
                                     <h1>
                                         Hello world
                                     </h1>
@@ -43,9 +43,7 @@
                                         hello beautiful world, I am missing you. See you this summer on July
                                         I have to finish my app before this summer. Earn some money. Learn React, React Native and Node js and python.
                                     </p>
-                                </div>
-                            
-
+                    </div>                          
         </div>
         
     </body>
